[package]
name = "flickr_warc"
version = "0.1.0"
authors = ["Ben Wang <wangben3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warc = "0.2.1"
flate2 = { version = "1.0", features = ["zlib-ng-compat"], default-features = false }
serde = {version = "1.0", features = ["derive"]}
lazy_static = "1.4.0"
anyhow = "1.0.40"
scraper = "0.12.0"
chrono-english = "0.1.6"
chrono = "0.4.19"
immeta = "0.4"
url = "2.2.1"
regex = "1.4.5"
httparse = "1.3.6"
tfrecord = "0.7.0"